fixed the overlapping, organized the pdfs and made the buttons another color

--- a/css/buttonappointment.css
+++ b/css/buttonappointment.css
@@ -1,23 +1,17 @@
 .d-1 {
+  color: azure;
   width: fit-content;
   --b: 4px;
   /* border length*/
   --c: 20px;
   /* the cube perspective */
-
   --g: calc(var(--c)*0.707);
   /* 0.707 = cos(45deg) = sin(45deg) */
-
-
   padding: 8px;
   transition: 0.5s;
-  border: solid transparent;
+  border: solid;
   border-width: var(--b) var(--b) calc(var(--c) + var(--b)) calc(var(--c) + var(--b));
-  background:
-    linear-gradient(-45deg, transparent var(--g), rgba(255, 255, 255, 0.6) 0) left /var(--c) 100%,
-    linear-gradient(135deg, transparent var(--g), rgba(255, 255, 255, 0.3) 0) bottom /100% var(--c),
-    conic-gradient(from -90deg at top var(--b) right var(--b), currentColor 270deg, transparent 0),
-    conic-gradient(from 90deg at bottom calc(var(--c) + var(--b)) left calc(var(--c) + var(--b)), currentColor 270deg, transparent 0);
+  background: linear-gradient(-45deg, black var(--g), rgb(0 0 0 / 60%) 0) left / var(--c) 100%, linear-gradient(135deg, transparent var(--g), rgb(0 0 0 / 30%) 0) bottom / 100% var(--c), conic-gradient(from -90deg at top var(--b) right var(--b), currentColor 270deg, #3ddede66 0), conic-gradient(from 90deg at bottom calc(var(--c) + var(--b)) left calc(var(--c) + var(--b)), currentColor 270deg, transparent 0);
   background-repeat: no-repeat;
   background-origin: border-box;
   transform: translate(calc(var(--c)/-1), calc(var(--c)/1));
@@ -30,6 +24,7 @@
 }
 
 .d-1:hover {
+  background:white;
   transform: translate(0, 0);
   clip-path:
     polygon(0% var(--c), var(--c) 0%,
@@ -49,7 +44,7 @@
 
 
   padding: 8px;
-  color: blue;
+  color: white;
   transition: 0.5s;
   border: solid transparent;
   border-width: var(--b) calc(var(--c) + var(--b)) calc(var(--c) + var(--b)) var(--b);
